--- a/style.css
+++ b/style.css
@@ -18,3 +18,12 @@ span{
 .image{
     background-color: rgb(236, 234, 234);
 }
+.price{
+    color: #FA804C;
+}
+.shoe-title{
+    color: #363958;
+}
+.color{
+    color: #363958;
+}
