--- a/style.css
+++ b/style.css
@@ -24,17 +24,29 @@ span{
 .shoe-title{
     color: #363958;
 }
-.color{
+.last-part-color{
     color: #363958;
 }
 
 
 @media only screen and (max-width: 576px) {
-    .mobile-banner {
+    .mobile-banner, .mobile-last{
       display: flex;
       flex-direction: column-reverse;
     }
     .mobile-banner-text{
         padding-top: 50px;
     }
+    .mobile-last2{
+        display: flex;
+        flex-direction: column ;
+        text-align: center;
+    }
+  }
+
+  @media only screen and (min-width: 768px) and (max-width: 992px) {
+    .tablet-last{
+        display: flex;
+        flex-direction: column-reverse;
+      }
   }
