--- a/style.css
+++ b/style.css
@@ -37,6 +37,9 @@ span{
     .mobile-banner-text{
         padding-top: 50px;
     }
+    .jacket-header{
+        text-align: center;
+    }
     .mobile-last2{
         display: flex;
         flex-direction: column ;
@@ -49,4 +52,7 @@ span{
         display: flex;
         flex-direction: column-reverse;
       }
+    .jacket-header{
+        text-align: center;
+    }
   }
